Fix position of some text on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ html {
 }
 .menu__title {
   display: flex;
+  justify-content: center;
   font-weight: bold;
   font-size: 1.7rem;
   text-align: center;
@@ -263,13 +264,14 @@ html {
 }
 .menu__subtitle {
   display: flex;
+  justify-content: center;
   font-weight: 100;
   font-size: 1.1rem;
   text-align: center;
   padding: 0 0 2rem 0;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
   .menu {
     padding: 1rem 0 0 0;
   }
@@ -328,7 +330,7 @@ html {
   margin: 0 0 0 0;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
   .howItWork {
     height: fit-content;
     padding: 1rem 0 0 0;
@@ -461,7 +463,7 @@ html {
     transform: scaleX(1);
   }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
   .restaurants {
     height: fit-content;
   }
@@ -505,7 +507,7 @@ html {
   padding: 0 0.5rem 0 0;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
   .footer {
     width: 100%;
   }
@@ -515,7 +517,7 @@ html {
   margin: 0 0 0 0;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
   .rightPartOnComputer {
     padding: 0 1rem 0 1rem;
     display: flex;
