--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -34,7 +34,7 @@
     }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 916px) {
     .footer{
         width: 100%;
     }
